--- a/i18n/en/docusaurus-plugin-content-docs/current.json
+++ b/i18n/en/docusaurus-plugin-content-docs/current.json
@@ -76,11 +76,11 @@
     "description": "The generated-index page description for category 开发环境搭建 in sidebar newSidebar"
   },
   "sidebar.newSidebar.category.基础实验": {
-    "message": "基础实验",
+    "message": "Basic Examples",
     "description": "The label for category 基础实验 in sidebar newSidebar"
   },
   "sidebar.newSidebar.category.基础实验.link.generated-index.description": {
-    "message": "常用GPIO基础实验",
+    "message": "Common GPIO basic experiments",
     "description": "The generated-index page description for category 基础实验 in sidebar newSidebar"
   },
   "sidebar.newSidebar.category.机器视觉": {
