--- a/i18n/en/docusaurus-theme-classic/footer.json
+++ b/i18n/en/docusaurus-theme-classic/footer.json
@@ -42,5 +42,9 @@
   "copyright": {
     "message": "Copyright © 2024 01Studio, Inc. Built with Docusaurus.",
     "description": "The footer copyright"
+  },
+  "link.item.label.Discord": {
+    "message": "Discord",
+    "description": "The label of footer link with label=Discord linking to https://discord.gg/QxHYBxSzMG"
   }
 }
