--- a/i18n/en/docusaurus-plugin-content-docs/current.json
+++ b/i18n/en/docusaurus-plugin-content-docs/current.json
@@ -298,5 +298,45 @@
   "sidebar.pyCarSidebar.category.小车综合实验.link.generated-index.description": {
     "message": "小车综合应用",
     "description": "The generated-index page description for category 小车综合实验 in sidebar pyCarSidebar"
+  },
+  "sidebar.pyClockSidebar.category.开箱指南": {
+    "message": "开箱指南",
+    "description": "The label for category 开箱指南 in sidebar pyClockSidebar"
+  },
+  "sidebar.pyClockSidebar.category.开箱指南.link.generated-index.description": {
+    "message": "硬件和相关资源介绍",
+    "description": "The generated-index page description for category 开箱指南 in sidebar pyClockSidebar"
+  },
+  "sidebar.pyClockSidebar.category.开发环境搭建": {
+    "message": "开发环境搭建",
+    "description": "The label for category 开发环境搭建 in sidebar pyClockSidebar"
+  },
+  "sidebar.pyClockSidebar.category.开发环境搭建.link.generated-index.description": {
+    "message": "开始使用你的CanMV K230 AI开发板。",
+    "description": "The generated-index page description for category 开发环境搭建 in sidebar pyClockSidebar"
+  },
+  "sidebar.pyClockSidebar.category.基础实验": {
+    "message": "基础实验",
+    "description": "The label for category 基础实验 in sidebar pyClockSidebar"
+  },
+  "sidebar.pyClockSidebar.category.基础实验.link.generated-index.description": {
+    "message": "常用GPIO基础实验",
+    "description": "The generated-index page description for category 基础实验 in sidebar pyClockSidebar"
+  },
+  "sidebar.pyClockSidebar.category.WiFi应用": {
+    "message": "WiFi应用",
+    "description": "The label for category WiFi应用 in sidebar pyClockSidebar"
+  },
+  "sidebar.pyClockSidebar.category.WiFi应用.link.generated-index.description": {
+    "message": "CanMV开发板实现Socket、MQTT等常用网络编程应用",
+    "description": "The generated-index page description for category WiFi应用 in sidebar pyClockSidebar"
+  },
+  "sidebar.pyClockSidebar.category.天气时钟综合实验": {
+    "message": "天气时钟综合实验",
+    "description": "The label for category 天气时钟综合实验 in sidebar pyClockSidebar"
+  },
+  "sidebar.pyClockSidebar.category.天气时钟综合实验.link.generated-index.description": {
+    "message": "手柄综合应用",
+    "description": "The generated-index page description for category 天气时钟综合实验 in sidebar pyClockSidebar"
   }
 }
