--- a/i18n/en/docusaurus-theme-classic/footer.json
+++ b/i18n/en/docusaurus-theme-classic/footer.json
@@ -52,7 +52,7 @@
     "description": "The label of footer link with label=核桃派 linking to https://www.walnutpi.com"
   },
   "link.item.label.技术论坛": {
-    "message": "技术论坛",
+    "message": "Forum",
     "description": "The label of footer link with label=技术论坛 linking to https://forum.01studio.cc"
   }
 }
