--- a/i18n/en/docusaurus-theme-classic/navbar.json
+++ b/i18n/en/docusaurus-theme-classic/navbar.json
@@ -8,7 +8,7 @@
     "description": "The alt text of navbar logo"
   },
   "item.label.CanMV K210教程": {
-    "message": "CanMV K210 Tutorial",
+    "message": "CanMV K210",
     "description": "Navbar item with label CanMV K210教程"
   },
   "item.label.论坛": {
@@ -28,15 +28,15 @@
     "description": "Navbar item with label AliExpress"
   },
   "item.label.01官网": {
-    "message": "01 Official website",
+    "message": "01 Official",
     "description": "Navbar item with label 01官网"
   },
   "item.label.CanMV K230教程": {
-    "message": "CanMV K230 Tutorial",
+    "message": "CanMV K230",
     "description": "Navbar item with label CanMV K230教程"
   },
   "item.label.开源项目教程": {
-    "message": "Open Source Project Tutorials",
+    "message": "Open Source Project",
     "description": "Navbar item with label 开源项目教程"
   },
   "item.label.pyDrone四轴飞行器": {
