--- a/i18n/en/docusaurus-theme-classic/navbar.json
+++ b/i18n/en/docusaurus-theme-classic/navbar.json
@@ -100,7 +100,7 @@
     "description": "Navbar item with label 麦哲伦 (STM32H743)"
   },
   "item.label.ESP32系列": {
-    "message": "STM32 series",
+    "message": "ESP32 series",
     "description": "Navbar item with label ESP32系列"
   },
   "item.label.pyWiFi ESP32-S3": {
