--- a/docs/pywifi_esp32_s3/module/ov2640/ov2640.md
+++ b/docs/pywifi_esp32_s3/module/ov2640/ov2640.md
@@ -176,7 +176,9 @@ cam_flag = 0 #拍照标志位
 ##############################
 def fun(KEY):
     global cam_flag
-    cam_flag = 1
+    time.sleep_ms(10) #消除抖动
+    if KEY.value()==0: #确认按键被按下
+        cam_flag = 1
 
 #中断初始化
 KEY.irq(fun,Pin.IRQ_FALLING) #定义中断，下降沿触发
